--- a/inventor.css
+++ b/inventor.css
@@ -1,7 +1,7 @@
 body{
   background-color: black;
   color: #463F3A;
-  font-family: "Cookie", Arial, sans-serif;
+  font-family: "Anuphan", Arial, sans-serif;
   font-size: 1.6em;
   margin: 0;
   padding: 0;
