--- a/inventor.css
+++ b/inventor.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Anuphan&family=Gelasio:wght@700&display=swap');
 body{
   background-color: black;
   color: #463F3A;
