--- a/inventor.css
+++ b/inventor.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anuphan&family=Gelasio:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oldenburg&display=swap');
 body{
   background-color: black;
   color: #463F3A;
