--- a/inventor.css
+++ b/inventor.css
@@ -2,8 +2,7 @@
 body{
   background-color: black;
   color: #463F3A;
-  font-family: "Anuphan", Arial, sans-serif;
-  font-size: 1.6em;
+  font-family: 'Goudy Bookletter 1911', serif;  font-size: 1.6em;
   margin: 0;
   padding: 0;
 }
