--- a/inventor.css
+++ b/inventor.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 body{
   background-color: black;
   color: #463F3A;
-  font-family: 'Goudy Bookletter 1911', serif;  font-size: 1.6em;
+  font-family: 'Cutive Mono', monospace, serif;  font-size: 1.6em;
   margin: 0;
   padding: 0;
 }
