--- a/inventor.css
+++ b/inventor.css
@@ -85,3 +85,9 @@ font-size: .60em;
 font-style: italic;
   text-align: center;
 }
+#wrapper {
+margin-left: auto;
+margin-right: auto;
+min-width: 650px;
+max-width: 900px;
+}
