--- a/inventor.css
+++ b/inventor.css
@@ -35,7 +35,7 @@ main img {
   background-color: #BCB8B1;
   text-align: center;
   border: solid 0.1px black;
-  background-image: url(https://images.immediate.co.uk/production/volatile/sites/4/2016/07/GettyImages-5383490532-33078cd.jpg?quality=90&crop=4px,18px,931px,401px&resize=940,400);
+  background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url(https://images.immediate.co.uk/production/volatile/sites/4/2016/07/GettyImages-5383490532-33078cd.jpg?quality=90&crop=4px,18px,931px,401px&resize=940,400);
   background-size: cover;
   background-position: 30% 20%;
 }
@@ -43,7 +43,7 @@ main img {
   background-color: #BCB8B1;
   text-align: center;
   border: solid 0.1px black;
-  background-image: url(https://historybyday.com/wp-content/uploads/2021/03/NikolaTesla04.jpg);
+  background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url(https://historybyday.com/wp-content/uploads/2021/03/NikolaTesla04.jpg);
   background-size: cover;
   background-position: 60% 20%;
 }
